2006-07-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Restore the class entry of zend_property_info when using php 5.2, this fixes bug #151

2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Branched 0.9.5, development for 0.9.6 will start in trunk
        * Bumped up version to 0.9.6-dev
        * Killing the very broken encoder. Once when eAccelerator is in full
          shape an encoder may return.
        * Some fixes to make eAccelerator compile with php 5.2, this fixes bug #150
        * Restore __toString methods correctly with php 5.2
        * Fix bug #145, objects are serialized when they are stored in shared memory.
          Users don't have to do this in their code anymore.
        * Wrong ifdef in compile fix for php 5.2
        * Update config.w32, VC6 and VC2005 project files
        * Fix debug build for win32, this fixes ticket #149
        * Removed a debug statement and added return value in optimizer.c

2006-07-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix restoring of opcode handler for php 5.0.5 when files are loaded
          from disk cache. This fixes bug #147
        * Some update in the release notes for the upcoming rc1
        * Fix loader.c too so we don't get any linking errors. 

2006-07-24  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Make clean routine support dir hashing. Again, this should be tested
          on win32!
        * Use a define for the magic string in the eAccelerator file headers
        * Bump up version to 0.9.5-rc1
        * Put -O2 back on for -rc1
        * Update the VC2005 project files
        * Add a config.w32 file for static building of eAccelerator

2006-07-24  Hans Rakers <hans at parse dot nl>
	* Fix for ticket #47 and #63, related to problems restoring empty
	  strings and empty string array keys from the disk cache.

2006-07-23  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
