@@ -1,3 +1,7 @@
+2006-07-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Use php realpath directly without wrapper, TSRM implements the realpath cache
+
 2006-07-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Restore the class entry of zend_property_info when using php 5.2, this fixes bug #151
